--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,11 @@
 h1 a {
-    color: #FCA205;
+    color: #FFA500;
 }
 body {
     padding-left: 15px;
 }
 h1 a {
-    color: #FCA205;
+    color: #000000;
     font-family: 'Lobster';
 }
 .page-header {
